# Simply-Typed-Lambda-Calculus

./: .gitignore  LICENSE  README.md  sem1.cabal
arc/: Combinators.hs  LambdaStream.hs  Main.hs  Reduction.hs  Solver.hs
src/: Main.hs  Solution.hs  Tests.hs  Types.hs
src/lang101/: Parser.hs  test.in
