name:                sem1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gltronred/sem1#readme
license:             BSD3
license-file:        LICENSE
author:              Mansur Ziatdinov
maintainer:          gltronred@gmail.com
copyright:           Copyright (c) 2016 Mansur Ziatdinov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sem1
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , primes
                     , containers
                     , either-unwrap

 
